old_supbase_self_hosted/k8s/ssl/managed-certificates.yaml
# Static IP reservation for consistent external IP
apiVersion: v1
kind: Service
metadata:
  name: supabase-static-ip-service
  labels:
    app: supabase
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  loadBalancerIP: # Will be assigned by GCP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    # This will be managed by ingress controller
    app: ingress-gce-controller
